added nearest neighbors

--- a/Decision Tree.ipynb
+++ b/Decision Tree.ipynb
@@ -11,8 +11,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/andreiagouveia23/.local/lib/python3.8/site-packages (1.0.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n"
      ]
     }
@@ -1432,10 +1432,10 @@
    "outputs": [],
    "source": [
     "#Get set with the values that the model receives\n",
-    "X = merged_inner.drop(columns=['Country/Region', 'Deaths'])\n",
+    "X = {'Confirmed' : merged_inner.drop(columns=[ 'Country/Region', 'Confirmed', 'Recovered']) , 'Deaths' : merged_inner.drop(columns=[ 'Country/Region', 'Deaths' , 'Recovered'])}\n",
     "\n",
     "#Values the model should predict\n",
-    "y = merged_inner['Deaths']"
+    "y = {'Confirmed' : merged_inner['Confirmed']  , 'Deaths' : merged_inner['Deaths']}"
    ]
   },
   {
@@ -1445,8 +1445,7 @@
    "outputs": [],
    "source": [
     "#Get the split of the trainning and testing set\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -1455,178 +1454,53 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DecisionTreeRegressor()"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On var  Confirmed\n",
+      "Mean Absolute Error: 262.26888217522657\n",
+      "Mean Squared Error: 3255317.923608114\n",
+      "Root Mean Squared Error: 1804.2499615097997\n",
+      "On var  Deaths\n",
+      "Mean Absolute Error: 19.104013810962453\n",
+      "Mean Squared Error: 15686.73543375054\n",
+      "Root Mean Squared Error: 125.24669829480752\n"
+     ]
     }
    ],
    "source": [
     "#Fitting model with tranning set\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "regressor = DecisionTreeRegressor()\n",
-    "regressor.fit(X_train, y_train)"
+    "from sklearn import metrics\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "variables = ['Confirmed' , 'Deaths']\n",
+    "\n",
+    "for variable in variables:\n",
+    "    \n",
+    "    print('On var ' , variable)\n",
+    "    \n",
+    "    #Setting up training sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X[variable], y[variable], test_size=0.2, random_state=0)\n",
+    "    regressor = DecisionTreeRegressor(random_state = 0)\n",
+    "    regressor.fit(X_train, y_train)\n",
+    "    \n",
+    "    #Predicting\n",
+    "    y_pred = regressor.predict(X_test)\n",
+    "    \n",
+    "    #Show difference of real and predicted values\n",
+    "    df=pd.DataFrame({'Actual':y_test, 'Predicted':y_pred})\n",
+    "    df\n",
+    "\n",
+    "    #Show Errors\n",
+    "    print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
+    "    print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
+    "    print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Predicting\n",
-    "y_pred = regressor.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Actual</th>\n",
-       "      <th>Predicted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>6116</th>\n",
-       "      <td>8</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2917</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9731</th>\n",
-       "      <td>252</td>\n",
-       "      <td>254.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1386</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9057</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6871</th>\n",
-       "      <td>12</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10935</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7863</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9650</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2317 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Actual  Predicted\n",
-       "6116        8        8.0\n",
-       "9997        0        1.0\n",
-       "2917        0        0.0\n",
-       "9731      252      254.0\n",
-       "1386        0        0.0\n",
-       "...       ...        ...\n",
-       "9057        0        0.0\n",
-       "6871       12       10.0\n",
-       "10935       0        0.0\n",
-       "7863        0        0.0\n",
-       "9650        0        0.0\n",
-       "\n",
-       "[2317 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Show difference of real and predicted values\n",
-    "df=pd.DataFrame({'Actual':y_test, 'Predicted':y_pred})\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 19.572723349158395\n",
-      "Mean Squared Error: 16874.64220975399\n",
-      "Root Mean Squared Error: 129.9024334250671\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Show Errors\n",
-    "from sklearn import metrics\n",
-    "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))\n",
-    "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))\n",
-    "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1686,7 @@
        "max       29.740000    1.228603e+06  73431.000000   189910.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
