--- a/SupportVectorMachines.ipynb
+++ b/SupportVectorMachines.ipynb
@@ -9,11 +9,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (1.0.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from pandas) (1.18.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from pandas) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\claud\\appdata\\roaming\\python\\python37\\site-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\claud\\miniconda3\\lib\\site-packages (from python-dateutil>=2.6.1->pandas) (1.14.0)\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /home/andreiagouveia23/.local/lib/python3.8/site-packages (1.0.3)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -579,7 +579,7 @@
    "outputs": [],
    "source": [
     "#Get set with the values that the model receives\n",
-    "X = merged_inner.drop(columns=['Country/Region', 'Confirmed'])\n",
+    "X = merged_inner.drop(columns=['Country/Region', 'Confirmed' ])\n",
     "\n",
     "#Values the model should predict\n",
     "y = merged_inner['Confirmed']"
@@ -602,22 +602,30 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='scale',\n",
-       "    kernel='sigmoid', max_iter=-1, shrinking=True, tol=0.001, verbose=False)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "after fit\n"
+     ]
     }
    ],
    "source": [
     "#Fitting model with tranning set\n",
     "from sklearn import svm\n",
-    "regressor = svm.SVR(kernel='sigmoid')\n",
-    "regressor.fit(X_train, y_train)"
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "svr_rbf = svm.SVR(gamma=1e-15, C=1e6, epsilon=0.2)\n",
+    "\n",
+    "#print(\"oi miga\")\n",
+    "#parameters = {'kernel':('linear', 'rbf'), 'C':[1, 10]}\n",
+    "#svr = svm.SVR()\n",
+    "#gsc = GridSearchCV(svr, parameters)\n",
+    "#print(\"adeus miga\")\n",
+    "regressor = svm.SVR(kernel='sigmoid' , tol = 1e-4)\n",
+    "svr_rbf.fit(X_train, y_train)\n",
+    "#gsc.fit(X_train, y_train)\n",
+    "print(\"after fit\")"
    ]
   },
   {
@@ -627,7 +635,7 @@
    "outputs": [],
    "source": [
     "#Predicting\n",
-    "y_pred = regressor.predict(X_test)"
+    "y_pred = svr_rbf.predict(X_test)"
    ]
   },
   {
@@ -664,27 +672,27 @@
        "    <tr>\n",
        "      <th>6116</th>\n",
        "      <td>101</td>\n",
-       "      <td>107.666459</td>\n",
+       "      <td>66.219695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9997</th>\n",
        "      <td>4</td>\n",
-       "      <td>95.768807</td>\n",
+       "      <td>9.654324</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2917</th>\n",
        "      <td>189</td>\n",
-       "      <td>138.393098</td>\n",
+       "      <td>345.662652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9731</th>\n",
        "      <td>10801</td>\n",
-       "      <td>219.563333</td>\n",
+       "      <td>2673.341234</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1386</th>\n",
        "      <td>5</td>\n",
-       "      <td>114.213935</td>\n",
+       "      <td>166.849600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -694,27 +702,27 @@
        "    <tr>\n",
        "      <th>9057</th>\n",
        "      <td>2</td>\n",
-       "      <td>145.093022</td>\n",
+       "      <td>120.153732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6871</th>\n",
        "      <td>717</td>\n",
-       "      <td>270.960445</td>\n",
+       "      <td>1499.863184</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10935</th>\n",
        "      <td>1</td>\n",
-       "      <td>189.965223</td>\n",
+       "      <td>79.152834</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7863</th>\n",
        "      <td>167</td>\n",
-       "      <td>107.939221</td>\n",
+       "      <td>242.024258</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9650</th>\n",
        "      <td>28</td>\n",
-       "      <td>219.563300</td>\n",
+       "      <td>1797.982106</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -722,18 +730,18 @@
        "</div>"
       ],
       "text/plain": [
-       "       Actual   Predicted\n",
-       "6116      101  107.666459\n",
-       "9997        4   95.768807\n",
-       "2917      189  138.393098\n",
-       "9731    10801  219.563333\n",
-       "1386        5  114.213935\n",
-       "...       ...         ...\n",
-       "9057        2  145.093022\n",
-       "6871      717  270.960445\n",
-       "10935       1  189.965223\n",
-       "7863      167  107.939221\n",
-       "9650       28  219.563300\n",
+       "       Actual    Predicted\n",
+       "6116      101    66.219695\n",
+       "9997        4     9.654324\n",
+       "2917      189   345.662652\n",
+       "9731    10801  2673.341234\n",
+       "1386        5   166.849600\n",
+       "...       ...          ...\n",
+       "9057        2   120.153732\n",
+       "6871      717  1499.863184\n",
+       "10935       1    79.152834\n",
+       "7863      167   242.024258\n",
+       "9650       28  1797.982106\n",
        "\n",
        "[2317 rows x 2 columns]"
       ]
@@ -758,9 +766,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 8606.517321365689\n",
-      "Mean Squared Error: 2755610217.914102\n",
-      "Root Mean Squared Error: 52493.906483649145\n"
+      "Mean Absolute Error: 7611.994743425476\n",
+      "Mean Squared Error: 2429420584.868503\n",
+      "Root Mean Squared Error: 49289.15281143005\n"
      ]
     }
    ],
