--- a/Nearest Neighbors Regression.ipynb
+++ b/Nearest Neighbors Regression.ipynb
@@ -1795,6 +1795,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neural Network Regression\n",
+    "======================="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
