--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -1857,7 +1857,7 @@
     "variables = ['Confirmed' , 'Deaths']\n",
     "    \n",
     "#different nr of iterations to compare results\n",
-    "max_iter_array = [100, 150, 200, 250 , 300 , 350]\n",
+    "max_iter_array = [150, 200, 250 , 300 , 350]\n",
     "\n",
     "\n",
     "for variable in variables:\n",
