--- a/SupportVectorMachines.ipynb
+++ b/SupportVectorMachines.ipynb
@@ -10,10 +10,12 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pandas in /home/andreiagouveia23/.local/lib/python3.8/site-packages (1.0.3)\n",
-      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2019.3)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /home/andreiagouveia23/.local/lib/python3.8/site-packages (from pandas) (1.18.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.7.3)\n",
+      "Requirement already satisfied: pandas in /home/filipasenra/.local/lib/python3.6/site-packages (1.0.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/lib/python3/dist-packages (from pandas) (2.6.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/lib/python3/dist-packages (from pandas) (2018.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /home/filipasenra/.local/lib/python3.6/site-packages (from pandas) (1.18.4)\n",
+      "\u001b[33mWARNING: You are using pip version 20.1; however, version 20.1.1 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -1002,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
